2013-11-30  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_octave_config.

	* misc/config/stk_octave_config.m: modified

	Reorganize the MOLE for the sake of flexibility.

	* misc/mole/corr: new folder
	* misc/mole/corr/corr.m: moved from misc/mole/matlab/stats
	* misc/mole/quantile: new folder
	* misc/mole/quantile/quantile.m: moved from misc/mole/matlab/stat
	* misc/mole/matlab/stats: removed
	* misc/mole/matlab/stats/quantile.m: moved to misc/mole/quantile
	* misc/mole/matlab/stats/corr.m: moved to misc/mole/corr
	* misc/config/stk_path.m: modified

2013-11-29  Julien Bect  <julien.bect@supelec.fr>

	Add a new function to the MOLE: corr.

	* misc/mole/matlab/stats/corr.m: new function

	Move octave_quantile to the MOLE.

	* misc/stats: removed
	* misc/stats/octave_quantile.m: removed
	* misc/mole/matlab/stats: new directory
	* misc/mole/matlab/stats/quantile.m: formerly known as
	misc/stats/octave_quantile
	* utils/arrays/@stk_dataframe/quantile.m: modified
	* misc/config/stk_path.m: modified

	Make stk_runexamples fail if at least one example failed.

	* trunk/misc/test/stk_runexamples.m: modified

2013-11-28  Julien Bect  <julien.bect@supelec.fr>

	Add a new MOLE function: graphicstoolkit.

	* misc/mole/matlab/graphics_toolkit.m: removed
	* misc/mole/common/graphicstoolkit.m: new function
	* examples/03_miscellaneous/stk_example_misc02: modified

2013-11-25  Julien Bect  <julien.bect@supelec.fr>

	Use a more conservative form of subplot (without options).

	* misc/plot/stk_subplot.m: modified

	Fix a bug in stk_path.

	* misc/config/stk_path.m: modified

2013-11-24  Julien Bect  <julien.bect@supelec.fr>

	Fix a typo (missing parenthesis) in stk_rescale.

	* utils/arrays/generic/stk_rescale.m: modified

	Fix a copy-paste typo in stk_path.

	* misc/config/stk_path.m: modified

	Increase test tolerance.

	* misc/distrib/distrib_student_cdf.m: modified

	Provide a replacement for graphics_toolkit in Matlab.
